# review

./: .gitignore  AGENTS.md  flake.nix  pyproject.toml
docs/: README.md  acceptance-checklist.md  architecture.md  comment-output-format.md  git-diff-model.md  known-limitations.md  product-requirements.md  testing-scenarios.md  tmux-integration.md  tui-behavior.md
src/review/: __init__.py  archive.py  cli.py  diff_model.py  errors.py  format_review.py  git.py  languages.py  review_state.py  tmux.py
src/review/tui/: __init__.py  app.py  file_tree.py  highlight.py  menu.py
tests/: __init__.py
tests/integration/: test_cli_integration.py  test_git_integration.py  test_tmux_real.py  test_tui_tmux_real.py
tests/tui/: test_tui_state_contract.py
tests/unit/: test_archive.py  test_cli_prompts.py  test_diff_model.py  test_file_tree.py  test_format_review.py  test_git_parse.py  test_languages.py  test_review_state.py  test_tmux.py
